adjusted CSS to prevent CSS collapse when no posts available from dashboard

--- a/css/layout_short.css
+++ b/css/layout_short.css
@@ -3,8 +3,8 @@
 	margin: 0 auto;
 	padding: 20px 10px;
 	background-color: #fff;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
 
 #nav {
@@ -13,8 +13,8 @@
 	margin: 150px auto;
 	margin-bottom: 0;
 	background-color: #96C6C8;
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
 	text-align: right;
 }
 
