--- a/css/post.css
+++ b/css/post.css
@@ -57,6 +57,11 @@ form {
     float: left;
 }
 
+#postWrapper {
+    width: 630px;
+    min-height: 200px;
+}
+
 article {
     margin-bottom: 15px;
     padding: 5px 7px;
@@ -67,7 +72,6 @@ article {
 .postRight p {
     margin: 10px 0;
 }
-
 
 time {
     display: block;
